# wii-examples

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml  ci.yml
audio/: CMakeLists.txt
audio/modplay/: CMakeLists.txt  Makefile
audio/modplay/source/: template.c
audio/mp3player/: CMakeLists.txt  Makefile
audio/mp3player/source/: template.c
audio/oggplayer/: CMakeLists.txt  Makefile  template.pnproj
audio/oggplayer/source/: oggplayer.c  template.c
crypto/source/: crypto.c
devices/: CMakeLists.txt
devices/network/: CMakeLists.txt  Makefile
devices/network/sockettest/: sockettest.pnproj
devices/network/sockettest/source/: sockettest.c
devices/network/udptest/source/: udptest.c
devices/usbgecko/: CMakeLists.txt
devices/usbgecko/gdbstub/: Makefile  gdbstub.pnproj
devices/usbgecko/gdbstub/source/: gdbstub.c
devices/usbgecko/source/: gdbstub.c
devices/usbkeyboard/: CMakeLists.txt
devices/usbkeyboard/basic_stdin/: Makefile
devices/usbkeyboard/basic_stdin/source/: basic_stdin.c
devices/usbkeyboard/source/: basic_stdin.c
devices/wifi/: Makefile
devices/wifi/source/: main.c
devices/wiimote/source/: wiimote.c
filesystem/: CMakeLists.txt
filesystem/directory/: CMakeLists.txt  Makefile
filesystem/directory/isfs/: Makefile
filesystem/directory/isfs/source/: main.c
filesystem/directory/sd/source/: directory.c
filesystem/directory/source/: directory.c
filesystem/directory_isfs/source/: main.c
filesystem/directory_sd/source/: directory.c
graphics/: CMakeLists.txt
graphics/gx/gxSprites/: Makefile  gxsprites.pnproj
graphics/gx/gxSprites/source/: gxsprites.c
graphics/gx/neheGX/: Makefile
graphics/gx/neheGX/lesson01/: Makefile  lesson1.pnproj
graphics/gx/neheGX/lesson01/source/: lesson1.c
graphics/gx/neheGX/lesson02/source/: lesson2.c
graphics/gx/neheGX/lesson03/source/: lesson3.c
graphics/gx/neheGX/lesson04/source/: lesson4.c
graphics/gx/neheGX/lesson05/source/: lesson5.c
graphics/gx/neheGX/lesson06/source/: lesson6.c
graphics/gx/neheGX/lesson07/source/: lesson7.c
graphics/gx/neheGX/lesson08/: Makefile
graphics/gx/neheGX/lesson08/source/: lesson8.c
graphics/gx/neheGX/lesson09/source/: lesson9.c
graphics/gx/neheGX/lesson1/: Makefile
graphics/gx/neheGX/lesson1/source/: lesson1.c
graphics/gx/neheGX/lesson10/: Makefile  lesson10.pnproj
graphics/gx/neheGX/lesson10/data/: world.txt
graphics/gx/neheGX/lesson10/source/: lesson10.c
graphics/gx/neheGX/lesson11/: Makefile  lesson11.pnproj
graphics/gx/neheGX/lesson11/source/: lesson11.c
graphics/gx/neheGX/lesson12/: Makefile  lesson12.pnproj
graphics/gx/neheGX/lesson12/source/: lesson12.c
graphics/gx/neheGX/lesson19/: Makefile  lesson19.pnproj
graphics/gx/neheGX/lesson19/source/: lesson19.c
graphics/gx/neheGX/lesson2/: lesson2.pnproj
graphics/gx/neheGX/lesson2/source/: lesson2.c
graphics/gx/neheGX/lesson3/: Makefile  lesson3.pnproj
graphics/gx/neheGX/lesson3/source/: lesson3.c
graphics/gx/neheGX/lesson4/: Makefile  lesson4.pnproj
graphics/gx/neheGX/lesson4/source/: lesson4.c
graphics/gx/neheGX/lesson5/: lesson5.pnproj
graphics/gx/neheGX/lesson5/source/: lesson5.c
graphics/gx/neheGX/lesson6/: Makefile
graphics/gx/neheGX/lesson6/source/: lesson6.c
graphics/gx/neheGX/lesson7/source/: lesson7.c
graphics/gx/neheGX/lesson8/: Makefile
graphics/gx/neheGX/lesson8/source/: lesson8.c
graphics/gx/neheGX/lesson9/: Makefile
graphics/gx/romfont/source/: romfont.c
graphics/gx/triangle/: Makefile  triangle.pnproj
graphics/gx/triangle/source/: triangle.c
graphics/gxSprites/: CMakeLists.txt
graphics/neheGX/: CMakeLists.txt
graphics/neheGX/lesson01/: CMakeLists.txt
graphics/neheGX/lesson01/source/: lesson1.c
graphics/neheGX/lesson02/: CMakeLists.txt
graphics/neheGX/lesson02/source/: lesson2.c
graphics/neheGX/lesson03/: CMakeLists.txt
graphics/neheGX/lesson03/source/: lesson3.c
graphics/neheGX/lesson04/: CMakeLists.txt
graphics/neheGX/lesson05/: CMakeLists.txt
graphics/neheGX/lesson05/source/: lesson5.c
graphics/neheGX/lesson06/: CMakeLists.txt
graphics/neheGX/lesson06/source/: lesson6.c
graphics/neheGX/lesson07/: CMakeLists.txt
graphics/neheGX/lesson07/source/: lesson7.c
graphics/neheGX/lesson08/: CMakeLists.txt
graphics/neheGX/lesson08/source/: lesson8.c
graphics/neheGX/lesson09/: CMakeLists.txt
graphics/neheGX/lesson10/: CMakeLists.txt
graphics/neheGX/lesson10/data/: world.txt
graphics/neheGX/lesson10/source/: lesson10.c
graphics/neheGX/lesson10/textures/: mud.scf
graphics/neheGX/lesson11/: CMakeLists.txt
graphics/neheGX/lesson11/source/: lesson11.c
graphics/neheGX/lesson11/textures/: Tim.scf
graphics/neheGX/lesson12/: CMakeLists.txt
graphics/neheGX/lesson12/source/: lesson12.c
graphics/neheGX/lesson12/textures/: Cube.scf
graphics/neheGX/lesson19/: CMakeLists.txt
graphics/neheGX/lesson19/textures/: Particle.scf
graphics/triangle/: CMakeLists.txt
graphics/triangle/source/: triangle.c
template/: CMakeLists.txt  Makefile
template/source/: template.c
templates/cmake/application/: CMakeLists.txt  README.md
templates/cmake/application/source/: main.c
templates/makefile/application/: Makefile
templates/makefile/application/source/: template.c
threading/basic_threading/source/: basic_threading.c
threading/source/: main.c
